# mcnbt

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: deploy.yml
examples/: README.md  json.rs  maketree.rs  read.rs  write.rs
src/: byte_order.rs  cli.rs  errors.rs  lib.rs  parser.rs  tag.rs
web/: Cargo.toml  LICENSE_MIT  README.md  build.sh
web/site/: index.html  script.js  style.css
web/src/: lib.rs
