[package]
name = "mcnbt"
version = "1.0.0"
authors = ["Jonas da Silva"]
edition = "2021"
description = "Read and write NBT"
repository = "https://github.com/phoenixr-codes/mcnbt"
license = "MIT"
keywords = ["minecraft", "nbt", "parser"]
categories = []

[[bin]]
name = "nbt"
path = "src/cli.rs"
required-features = ["cli", "read"]

[dependencies]
clap = {version = "4.4.7", optional = true}
nom = {version = "7.1.3", optional = true}
num-traits = "0.2.17"
residua-mutf8 = "2.0.0"
thiserror = "1.0.50"

[features]
default = ["read"]
cli = ["clap"]
read = ["nom"]
