[package]
name = "mcnbt"
version = "2.0.0"
authors = ["Jonas da Silva"]
edition = "2021"
description = "Read and write NBT"
repository = "https://github.com/phoenixr-codes/mcnbt"
license = "MIT"
keywords = ["minecraft", "nbt", "parser"]
categories = []
resolver = "2"

[[bin]]
name = "nbt"
path = "src/cli.rs"
required-features = ["cli", "read"]

[dependencies]
clap = { version = "4.4.7", optional = true }
nom = { version = "7.1.3", optional = true }
num-traits = "0.2.17"
residua-mutf8 = "2.0.0"
serde = { version = "1.0.192", features = ["derive"], optional = true }
thiserror = "1.0.50"

[dev-dependencies]
serde_json = { version = "1.0.108", features = ["preserve_order"] }

[features]
default = ["read"]
cli = ["clap"]
read = ["nom"]
serde = ["dep:serde"]

[[example]]
name = "json"
required-features = ["serde"]

